--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <p class="same15">Number 1 - I'm a class!</p>
-    <div>Number 2 - I'm one ID.</div>
-    <p>Number 3 - I'm a class, but cooler!</p>
-    <div>Number 4 - I'm another ID.</div>
+    <div id="number2">Number 2 - I'm one ID.</div>
+    <p class="same15 cooler">Number 3 - I'm a class, but cooler!</p>
+    <div id="number4">Number 4 - I'm another ID.</div>
     <p class="same15">Number 5 - I'm a class!</p>
   </body>
 </html>
